<resources>
    <!-- API keys -->
    <!-- getaddresses.io -->
    <string name="getaddresses_url_prefix">https://api.getAddress.io/v2/uk/</string>
    <string name="getaddresses_api_password">slIKq17rNkyBzYtsS0qe-g5192</string>
    <string name="getaddresses_api_username">api-key</string>

    <!-- Universal Strings -->
    <string name="app_name">püd</string>
    <string name="price">£ %1$f.2</string>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="mins">mins</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <!-- Titles -->
    <string name="title_basket">Basket</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_new_address">Add new address</string>
    <string name="title_new_card">Add new card</string>
    <string name="title_order_status">Order Status:</string>
    <string name="title_review">Review</string>

    <!-- Menu Options -->
    <string name="menu_favourite">Add to Favourites</string>
    <string name="menu_favourite_short">Favourite</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_account">My Account</string>
    <string name="menu_add">Add to basket</string>
    <string name="menu_add_short">Add</string>

    <!-- Warnings -->
    <string name="contains_nuts">Warning: this dish contains nuts or nut traces.</string>
    <string name="contains_alcohol">This dish contains alcohol.</string>
    <string name="contains_lactose">This dish contains lactose.</string>

    <!-- Home Page -->
    <string name="home_page_message">Fresh food in your community\nDelivered to your door</string>
    <string name="get_started">Get Started!</string>

    <!-- Search Page -->
    <string name="search_chef_hint">Search for Items or Chefs</string>
    <string name="eta_suffix">" mins"</string>
    <string name="currency_icon">£</string>
    <string name="asap">A.S.A.P.</string>
    <string name="location">Location</string>
    <string name="dialog_search_title">Select filters to apply to search results:</string>
    <string name="nav_bar_title">My Account</string>
    <string name="nav_bar_login">Log in</string>
    <string-array name="nav_bar_list">
        <item>Find Food</item>
        <item>My Orders</item>
        <item>My Details</item>
        <item>Manage Addresses</item>
        <item>Manage Payment Methods</item>
        <item>Promo Code / Share</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <!-- Chef Menu Page -->
    <string name="chef_bio_prompt">Touch to read more...</string>
    <string name="chef_bio_prompt_2">Touch again to close...</string>
    <string name="menu_divider">Menü</string>
    <plurals name="snackbar_message">
        <item quantity="one">%1$s added to your basket.</item>
        <item quantity="other">%2$dx %1$s added to your basket.</item>
    </plurals>
    <string name="snackbar_action_message">REMOVE</string>
    <string name="snackbar_item_removed">%1$s removed from basket.</string>
    <!-- Quick Add Dialog -->
    <string name="dialog_add">Add</string>
    <string name="dialog_checkout">Add + Checkout</string>
    <string name="dialog_title">Add how many %1$s to basket?</string>
    <string name="dialog_prompt">Hint: Click %1$s to add to basket, then go straight to checkout.</string>

    <!-- Item Page -->
    <string name="item_award_info">This dish is %1$s.</string>
    <string name="review_divider">Üser Reviews</string>

    <!-- Basket Page -->
    <string name="subtotal">Subtotal:</string>
    <string name="delivery_charge">Delivery Charge:</string>
    <string name="surcharge">Surcharge for order under %1$s :</string>
    <string name="quantity_suffix">%1$d x</string>
    <string name="total_price">Total:</string>

    <!-- Checkout Page -->
    <string name="place_order">Place Order</string>
    <string name="add_new_address">Add new address</string>
    <string name="add_new_payment_method">Add new card</string>

    <!-- Order tracking page -->
    <string name="order_tracking_top_text">Order Status:</string> <!-- delete when safe: replaced by title_order_status -->
    <string-array name="order_statuses">
        <item>Awaiting confirmation from %1$s</item>
        <item>Your food is ready to be shipped</item>
        <item>Your food is on its way!</item>
        <item>Delivered. Enjoy!</item>
    </string-array>
    <string name="order_tracking_rate">Rate your food</string>

    <!-- Review page -->
    <string name="review_question">How was your order from %1$s?</string>
    <string name="review_delivered">Delivered: %1$s</string>
    <string name="review_header">Review: (Optional)</string>
    <string name="review_title_hint">Review Title</string>
    <string name="review_hint">Leave a short review of your experience.</string>
    <string name="review_dialog_title">Submit your rating without a review?</string>
    <string name="review_dialog_message">Fancy sharing your thoughts on your experience?\nReviews help the chefs to improve and inform other consumers about what you loved.\n\nLeave 5 reviews to earn a 10% discount on your subsequent order!</string>
    <string name="review_dialog_positive">ADD REVIEW</string>
    <string name="review_dialog_negative">RATING ONLY</string>
    <string name="review_rating_required">Please select a rating before submitting!</string>
    <string name="review_submitted_toast_text">Thank you for submitting your rating!</string>


    <!-- New Address/Card Dialogs -->
    <string name="dialog_save_title">Save %1$s information?</string>
    <string name="dialog_save_message">The %1$s information you\'ve entered has not yet been saved.\nDo you wish to save the %2$s information before returning?</string>
    <string name="dialog_save_save">SAVE</string>
    <string name="dialog_save_discard">DISCARD</string>
    <string name="dialog_save_continue_editing">CONTINUE EDITING</string>
    <string name="error_not_enough_info">Not enough information entered yet.\nPopulate all \'required\' fields before saving.</string>

    <!-- New Address Page -->
    <string name="address">address</string>
    <string name="address_location_lookup">Use Current Location</string>
    <string name="address_line1"> Address Line 1 (Required)</string>
    <string name="address_line2"> Address Line 2</string>
    <string name="address_line3"> City (Required)</string>
    <string name="address_line4"> County</string>
    <string name="address_postcode"> Postcode (Required)</string>
    <string name="address_postcode_hint">Enter Postcode</string>
    <string name="address_postcode_search">Look-up address</string>
    <string name="address_manual">Enter Address Manually</string>

    <!-- New Card Page -->
    <string name="card">card</string>

    <!-- Footer Button Texts -->
    <string name="basket_text">View Basket</string>
    <string name="go_to_checkout">Go To Checkout</string>
    <string name="title_activity_chef_signup1">Sign-up!</string>
    <string name="title_activity_review">ReviewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
