<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemActivity">
    <item
        android:id="@+id/item_add"
        android:icon="@drawable/ic_add_white_48dp"
        android:title="@string/menu_add"
        android:titleCondensed="@string/menu_add_short"
        app:showAsAction="always"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/item_favourite"
        android:icon="@drawable/ic_favorite_border_white_48dp"
        android:title="@string/menu_favourite"
        android:titleCondensed="@string/menu_favourite_short"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="300"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_account_box_black_48dp"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>