<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:onClick="getAddressFromLocationClicked">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_primary_text_padding"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/card_primary_text_padding"
                android:textColor="@android:color/white"
                android:text="@string/address_location_lookup"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@android:drawable/ic_menu_mylocation"
                android:tint="@android:color/white"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_address_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_below="@+id/card_current_location"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_line_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line1"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_margin="6dp"/>
            <EditText
                android:id="@+id/et_line_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line2"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_margin="6dp"/>
            <EditText
                android:id="@+id/et_line_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line3"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_margin="6dp"/>
            <EditText
                android:id="@+id/et_line_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line4"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_margin="6dp"/>
            <EditText
                android:id="@+id/et_postcode_full"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_postcode"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_margin="6dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_below="@+id/card_address_full">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/et_postcode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/address_postcode_hint"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_margin="6dp"/>
            <android.support.v7.widget.CardView
                android:id="@+id/card_postcode_lookup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_margin="4dp"
                android:onClick="getAddressFromPostcodeClicked">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/address_postcode_search"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_margin="4dp"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/manual_address_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_manual"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:padding="12dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/card_postcode"
            android:onClick="manualAddressEntryClicked"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/address_save_fab"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_menu_save"
        android:tint="@color/colorPrimary"
        android:visibility="gone"
        android:onClick="saveClicked"/>
</RelativeLayout>