<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thonners.kooku.ReviewActivity"
    tools:showIn="@layout/activity_review">

    <!-- Define footer button first, to the layout_above attribute can be used for the main card -->
    <android.support.v7.widget.CardView
        android:id="@+id/review_footer_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_button_height"
        android:elevation="@dimen/footer_button_elevation"
        app:cardBackgroundColor="@color/star_grey"
        android:layout_alignParentBottom="true"
        android:onClick="submitRatingClicked">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/footer_button_text_size"
            android:text="@string/submit"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/review_main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/review_footer_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/review_main_card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/review_main_image"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/home_brownie_1"/>

            <TextView
                android:id="@+id/review_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_gravity="center_vertical"/>
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="0dp"
                    android:elevation="0dp">
                    <TextView
                        android:id="@+id/review_delivered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textAlignment="center"/>
                </android.support.v7.widget.CardView>
            </FrameLayout>


            <LinearLayout
                android:id="@+id/review_stars_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/review_star_1"
                    android:src="@drawable/ic_star"
                    android:tint="@color/star_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>
                <ImageView
                    android:id="@+id/review_star_2"
                    android:src="@drawable/ic_star"
                    android:tint="@color/star_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>
                <ImageView
                    android:id="@+id/review_star_3"
                    android:src="@drawable/ic_star"
                    android:tint="@color/star_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>
                <ImageView
                    android:id="@+id/review_star_4"
                    android:src="@drawable/ic_star"
                    android:tint="@color/star_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>
                <ImageView
                    android:id="@+id/review_star_5"
                    android:src="@drawable/ic_star"
                    android:tint="@color/star_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/review_review_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/review_header"/>
            <EditText
                android:id="@+id/review_review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:hint="@string/review_title_hint"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/review_review_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:hint="@string/review_hint"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
